# superzet

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-AGPL  LICENSE-APACHE  README.md  SECURITY.md
.cargo/: ci-config.toml
.cloudflare/: README.md
.cloudflare/docs-proxy/: wrangler.toml
.cloudflare/open-source-website-assets/: wrangler.toml
.cloudflare/release-assets/: wrangler.toml
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: feature-requests.yml
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  11_crash_report.yml  config.yml
.github/workflows/: assign-reviewers.yml  autofix_pr.yml  bump_patch_version.yml  danger.yml  deploy_cloudflare.yml  extension_bump.yml  extension_tests.yml  extension_workflow_rollout.yml  publish_extension_cli.yml  release.yml  run_bundling.yml  run_tests.yml
assets/keymaps/: default-macos.json
assets/settings/: default.json
crates/agent_settings/: Cargo.toml
crates/explorer_command_injector/: AppxManifest-Dev.xml  Cargo.toml
crates/git_ui/: Cargo.toml
crates/notifications/: Cargo.toml
crates/paths/: Cargo.toml
crates/project/: Cargo.toml
crates/superzet_agent/: Cargo.toml
crates/superzet_agent/src/: runtime.rs
docs/: AGENTS.md  README.md  book.toml
script/: bump-zed-patch-version  bundle-linux  bundle-mac  bundle-windows.ps1  cargo  check-local-ci  clippy  clippy.ps1  create-draft-release  determine-release-channel  determine-release-channel.ps1  draft-release-notes  generate-action-metadata  get-released-version  install-linux  install.sh  trigger-release  uninstall.sh
(+140 files in other folders)
