[package]
name = "superzet_agent"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
collections.workspace = true
log.workspace = true
paths.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
smol.workspace = true
superzet_model.workspace = true
task.workspace = true
tiny_http.workspace = true
url.workspace = true
uuid.workspace = true
